--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@types/chai": "^4.2.0",
     "@types/ioredis": "^4.0.15",
+    "@types/lodash": "^4.14.138",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "ioredis": "^4.14.0",
+    "lodash": "^4.17.15",
     "mocha": "^6.2.0",
     "ts-mocha": "^6.0.0"
   }
