[Add] mysql bench

--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "private": false,
   "license": "MIT",
   "dependencies": {
-    "@types/chai": "^4.2.0",
     "@types/ioredis": "^4.0.15",
-    "@types/lodash": "^4.14.138",
-    "@types/mocha": "^5.2.7",
-    "chai": "^4.2.0",
-    "ioredis": "^4.14.0",
-    "lodash": "^4.17.15",
-    "mocha": "^6.2.0",
-    "ts-mocha": "^6.0.0"
+    "ioredis": "^4.14.0"
   },
   "scripts": {
     "test": "ts-mocha test/index.ts",
     "build": "tsc",
     "prepublishOnly": "yarn build"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.0",
+    "@types/lodash": "^4.14.138",
+    "@types/mocha": "^5.2.7",
+    "@types/mysql": "^2.15.7",
+    "chai": "^4.2.0",
+    "lodash": "^4.17.15",
+    "mocha": "^6.2.0",
+    "mysql": "^2.17.1",
+    "promise-mysql": "^4.1.0",
+    "ts-mocha": "^6.0.0"
   }
 }
